[project]
name = "ppo-impl"
version = "0.1.0"
description = ""
authors = [
    {name = "ignius299792458",email = "bogati.mahesh.299.792.458@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "gym (>=0.26.2,<0.27.0)",
    "torch (>=2.10.0,<3.0.0)",
    "stable-baselines3 (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.9,<0.16.0)"
]